<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
        android:layout_weight="1" >

    <LinearLayout
        android:id="@+id/gameFrame"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:background="#FFFFFF"
        android:orientation="vertical" >

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/padFrame"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:background="#DDFFFF" >

        <Button
            android:id="@+id/downBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="29dp"
            android:text="@string/downArrow" />

        <Button
            android:id="@+id/rightBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/rightArrow" />

        <Button
            android:id="@+id/upBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/downBtn"
            android:layout_alignParentTop="true"
            android:text="@string/upArrow" />

        <Button
            android:id="@+id/leftBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/rightBtn"
            android:text="@string/leftArrow" />

        <Button
            android:id="@+id/bombBtn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/leftBtn"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="28dp"
            android:text="@string/Bomb" />

    </RelativeLayout>

</LinearLayout>